mostly functional javascript herein

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <!-- timer display -->
         <p id="timer"></p>
         <!-- high score drop down menu to be created -->
-        <p>Highscores of yestertime and eversuchly</p>
+        <p>Ye olde highscores</p>
     </header>
     <main>
         <!-- intitial screen with startbutton -->
