timer decrements properly. Local storage highscores work

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
     <header>
         <!-- timer display -->
-        <p id="timer"></p>
+        <h2 id="timer"></h2>
         <!-- high score drop down menu to be created -->
-        <p>Ye olde highscores</p>
+        <h2 id="pastscores">Ye olde highscores</h2>
     </header>
     <script src=".\assets\script.js"></script>
 </body>
